--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,14 @@
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.11.0",
     "bootstrap": "^4.2.1",
+    "immutable": "^4.0.0-rc.12",
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-quill": "^1.3.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.8"
+    "react-scripts": "^2.1.8",
+    "slate": "^0.44.12",
+    "slate-react": "^0.21.18"
   },
   "scripts": {
     "start": "react-scripts start",
