--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-quill": "^1.3.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
     "slate": "^0.44.12",
