--- a/client/package.json
+++ b/client/package.json
@@ -3,24 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^3.6.0",
     "antd": "^3.15.0",
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.11.0",
     "bootstrap": "^4.2.1",
+    "craco-antd": "^1.10.0",
+    "craco-less": "^1.7.0",
     "immutable": "^4.0.0-rc.12",
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-quill": "^1.3.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.8",
-    "slate": "^0.44.12",
-    "slate-react": "^0.21.18"
+    "react-scripts": "^2.1.8"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:3001",
@@ -32,5 +33,11 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "antd-scss-theme-plugin": "^1.0.7",
+    "css-loader": "^2.1.1",
+    "less-loader": "^4.1.0",
+    "sass-loader": "^7.1.0"
+  }
 }
