--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,10 @@
     "antd": "^3.15.0",
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.11.0",
-    "bootstrap": "^4.2.1",
     "craco-antd": "^1.10.0",
     "craco-less": "^1.7.0",
     "immutable": "^4.0.0-rc.12",
+    "less": "^3.9.0",
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
@@ -34,8 +34,10 @@
     "not ie <= 11",
     "not op_mini all"
   ],
+  "peerDependencies": {
+    "less": "^2.3.7"
+  },
   "devDependencies": {
-    "antd-scss-theme-plugin": "^1.0.7",
     "css-loader": "^2.1.1",
     "less-loader": "^4.1.0",
     "sass-loader": "^7.1.0"
